test/corpus/dependent_types.txt
================================================================================
Universal quantification (Pi-type)
================================================================================

all x: Nat. Vec(x)

--------------------------------------------------------------------------------

(source_file
  (function_type
    (identifier)
    (natural_type)
    (type_application
      (identifier)
      (identifier))))

================================================================================
Existential quantification (Sigma-type)
================================================================================

any x: Nat. Vec(x)

--------------------------------------------------------------------------------

(source_file
  (sigma_type
    (identifier)
    (natural_type)
    (type_application
      (identifier)
      (identifier))))

================================================================================
Equality type
================================================================================

Nat{a == b}

--------------------------------------------------------------------------------

(source_file
  (implicit_application
    (natural_type)
    (binary_expression
      (identifier)
      (identifier))))

================================================================================
Function type arrow
================================================================================

A -> B

--------------------------------------------------------------------------------

(source_file
  (function_type
    (identifier)
    (identifier)))

================================================================================
Type universe
================================================================================

Set

--------------------------------------------------------------------------------

(source_file
  (type_universe))

================================================================================
Metavariable with context
================================================================================

?M:Nat{x,y}

--------------------------------------------------------------------------------

(source_file
  (implicit_application
    (metavar
      (identifier)
      (natural_type))
    (identifier)
    (identifier)))

================================================================================
Reflexivity proof
================================================================================

{==}

--------------------------------------------------------------------------------

(source_file
  (reflexivity_proof))

================================================================================
Rewrite expression
================================================================================

rewrite e1 e2

--------------------------------------------------------------------------------

(source_file
  (rewrite_expression
    (identifier)
    (identifier)))

================================================================================
Absurd expression
================================================================================

absurd x

--------------------------------------------------------------------------------

(source_file
  (absurd_expression
    (identifier)))
