test/corpus/eliminator_lambdas.txt
================================================================================
Empty eliminator
================================================================================

λ{}

--------------------------------------------------------------------------------

(source_file
  (lambda_expression))

================================================================================
Unit eliminator
================================================================================

λ{(): body}

--------------------------------------------------------------------------------

(source_file
  (lambda_expression
    (lambda_match_case
      (unit_match
        (name
          (identifier))))))

================================================================================
Boolean eliminator
================================================================================

λ{False: zero; True: one}

--------------------------------------------------------------------------------

(source_file
  (lambda_expression
    (lambda_match_case
      (bool_match
        (name
          (identifier))
        (name
          (identifier))))))

================================================================================
Nat eliminator
================================================================================

λ{0n: zero; 1n+: succ}

--------------------------------------------------------------------------------

(source_file
  (lambda_expression
    (lambda_match_case
      (nat_match
        (name
          (identifier))
        (name
          (identifier))))))

================================================================================
List eliminator
================================================================================

λ{[]: nil; <>: cons}

--------------------------------------------------------------------------------

(source_file
  (lambda_expression
    (lambda_match_case
      (list_match
        (name
          (identifier))
        (name
          (identifier))))))

================================================================================
Pair eliminator
================================================================================

λ{(,): pair_body}

--------------------------------------------------------------------------------

(source_file
  (lambda_expression
    (lambda_match_case
      (pair_match
        (name
          (identifier))))))

================================================================================
Enum eliminator with default
================================================================================

λ{@A: handle_a; @B: handle_b; default}

--------------------------------------------------------------------------------

(source_file
  (lambda_expression
    (lambda_match_case
      (enum_match
        (constructor_tag
          (identifier))
        (name
          (identifier))
        (constructor_tag
          (identifier))
        (name
          (identifier))
        (name
          (identifier))))))

================================================================================
Simple enum eliminator
================================================================================

λ{&Color: color_body}

--------------------------------------------------------------------------------

(source_file
  (lambda_expression
    (lambda_match_case
      (enum_match
        (enum_symbol
          (identifier))
        (name
          (identifier))))))
