test/corpus/lambda_expressions.txt
================================================================================
Simple lambda expression
================================================================================

lambda x. x + 1

--------------------------------------------------------------------------------

(source_file
  (lambda_expression
    (identifier)
    (binary_expression
      (name
        (identifier))
      (literal
        (integer_literal)))))

================================================================================
Lambda with multiple parameters
================================================================================

λ x y. x + y

--------------------------------------------------------------------------------

(source_file
  (lambda_expression
    (identifier)
    (identifier)
    (binary_expression
      (name
        (identifier))
      (name
        (identifier)))))

================================================================================
Lambda match for booleans
================================================================================

λ{False: zero; True: one}

--------------------------------------------------------------------------------

(source_file
  (lambda_expression
    (lambda_match_case
      (bool_match
        (name
          (identifier))
        (name
          (identifier))))))

================================================================================
Lambda match for unit
================================================================================

λ{(): unit_value}

--------------------------------------------------------------------------------

(source_file
  (lambda_expression
    (lambda_match_case
      (unit_match
        (name
          (identifier))))))

================================================================================
Lambda match for lists
================================================================================

λ{
  []: empty
  <>: cons
}

--------------------------------------------------------------------------------

(source_file
  (lambda_expression
    (lambda_match_case
      (list_match
        (name
          (identifier))
        (name
          (identifier))))))

================================================================================
Fixed point expression
================================================================================

μ f. lambda x. f(x)

--------------------------------------------------------------------------------

(source_file
  (fix_expression
    (identifier)
    (lambda_expression
      (identifier)
      (application_expression
        function: (name
          (identifier))
        (name
          (identifier))))))
