test/corpus/numeric_types.txt
================================================================================
Unsigned integer literals (U64)
================================================================================

123
0xFF
0xCAFE
0b1011

--------------------------------------------------------------------------------

(source_file
  (application_expression
    (application_expression
      (application_expression
        (literal
          (integer_literal))
        (literal
          (hex_literal)))
      (literal
        (hex_literal)))
    (literal
      (binary_literal))))

================================================================================
Signed integer literals (I64)
================================================================================

+123
-456
+0x1F
-0b101

--------------------------------------------------------------------------------

(source_file
  (application_expression
    (application_expression
      (application_expression
        (literal
          (integer_literal))
        (literal
          (integer_literal)))
      (literal
        (hex_literal)))
    (literal
      (binary_literal))))

================================================================================
Float literals (F64)
================================================================================

3.14
-2.0
+1.5

--------------------------------------------------------------------------------

(source_file
  (application_expression
    (application_expression
      (literal
        (float_literal))
      (literal
        (float_literal)))
    (literal
      (float_literal))))

================================================================================
Character literals
================================================================================

'a'
'\n'
'\u0041'
'\\'

--------------------------------------------------------------------------------

(source_file
  (application_expression
    (application_expression
      (application_expression
        (literal
          (character_literal))
        (literal
          (character_literal)))
      (literal
        (character_literal)))
    (literal
      (character_literal))))

================================================================================
String literal (desugars to Char[])
================================================================================

"hello world"

--------------------------------------------------------------------------------

(source_file
  (literal
    (string_literal)))

================================================================================
Numeric type annotations
================================================================================

def x: U64 = 123
def y: I64 = -456
def z: F64 = 3.14
def c: Char = 'a'

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    type: (numeric_type)
    value: (literal
      (integer_literal)))
  (function_definition
    name: (identifier)
    type: (numeric_type)
    value: (literal
      (integer_literal)))
  (function_definition
    name: (identifier)
    type: (numeric_type)
    value: (literal
      (float_literal)))
  (function_definition
    name: (identifier)
    type: (numeric_type)
    value: (literal
      (character_literal))))
