test/corpus/operator_blocking.txt
================================================================================
If condition with colon (blocking : in condition)
================================================================================

if x: y else: z

--------------------------------------------------------------------------------

(source_file
  (if_expression
    (name
      (identifier))
    (name
      (identifier))
    (name
      (identifier))))

================================================================================
Tilde expression with braces (blocking { in term)
================================================================================

~ term { False: f; True: t }

--------------------------------------------------------------------------------

(source_file
  (tilde_match
    (name
      (identifier))
    (bool_match
      (name
        (identifier))
      (name
        (identifier)))))

================================================================================
Fork with colon (blocking : in label)
================================================================================

fork L: a elif: b else: c

--------------------------------------------------------------------------------

(source_file
  (fork_expression
    (name
      (identifier))
    (name
      (identifier))
    (name
      (identifier))
    (name
      (identifier))))

================================================================================
Match with colon (blocking : in scrutinee)
================================================================================

match x:
  case @A: body1
  case @B: body2

--------------------------------------------------------------------------------

(source_file
  (match_expression
    (name
      (identifier))
    (match_case
      (pattern
        (constructor_tag
          (identifier)))
      (name
        (identifier)))
    (match_case
      (pattern
        (constructor_tag
          (identifier)))
      (name
        (identifier)))))
