test/corpus/tight_vs_loose_parsing.txt
================================================================================
Tight function call
================================================================================

f()

--------------------------------------------------------------------------------

(source_file
  (application_expression
    function: (name
      (identifier))
    argument: (unit_literal)))

================================================================================
Loose function application to unit
================================================================================

f ()

--------------------------------------------------------------------------------

(source_file
  (application_expression
    function: (name
      (identifier))
    argument: (unit_literal)))

================================================================================
Tight list type
================================================================================

A[]

--------------------------------------------------------------------------------

(source_file
  (list_type
    (name
      (identifier))))

================================================================================
Loose application to empty list
================================================================================

A []

--------------------------------------------------------------------------------

(source_file
  (list_type
    (name
      (identifier))))

================================================================================
Tight type application
================================================================================

f<T,U>

--------------------------------------------------------------------------------

(source_file
  (name
    (identifier))
  (ERROR
    (name
      (identifier))
    (name
      (identifier))))

================================================================================
Tight equality predicate
================================================================================

Nat{x == y}

--------------------------------------------------------------------------------

(source_file
  (implicit_application
    (natural_type)
    (binary_expression
      (name
        (identifier))
      (name
        (identifier)))))

================================================================================
Combined tight postfix operations
================================================================================

f<A>(x)[]

--------------------------------------------------------------------------------

(source_file
  (application_expression
    function: (application_expression
      function: (name
        (identifier))
      (name
        (identifier))
      (name
        (identifier)))
    argument: (empty_list)))
