test/corpus/tilde_expressions.txt
================================================================================
Tilde empty match
================================================================================

~ impossible {}

--------------------------------------------------------------------------------

(source_file
  (tilde_expression
    (implicit_application
      (identifier))))

================================================================================
Tilde boolean match
================================================================================

~ b { False: f; True: t }

--------------------------------------------------------------------------------

(source_file
  (tilde_match
    (identifier)
    (bool_match
      (identifier)
      (identifier))))

================================================================================
Tilde nat match
================================================================================

~ n { 0n: z; 1n+: s }

--------------------------------------------------------------------------------

(source_file
  (tilde_match
    (identifier)
    (nat_match
      (identifier)
      (identifier))))

================================================================================
Tilde list match
================================================================================

~ xs { []: empty; <>: nonempty }

--------------------------------------------------------------------------------

(source_file
  (tilde_match
    (identifier)
    (list_match
      (identifier)
      (identifier))))

================================================================================
Tilde pair match
================================================================================

~ p { (,): handle_pair }

--------------------------------------------------------------------------------

(source_file
  (tilde_match
    (identifier)
    (pair_match
      (identifier))))
